[package]
name = "spl-token-minter-native-program"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.1"
solana-program = "^1.18.11"
spl-token = { version="4.0.0", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version="3.0.2", features = [ "no-entrypoint" ] }
mpl-token-metadata = { version="4.1.2" }
thiserror = "1.0"
[dependencies.uint]
default-features = false
version = "=0.9.1"

[dev-dependencies]
assert_matches = "1.4.0"
solana-logger = "1.8.11"
solana-program-test = "1.18.11"
solana-sdk = "1.18.11"
#solana-validator = "1.18.1"
tokio = "1.29.1"
[lib]
crate-type = ["cdylib", "lib"]
